
Please go to [[https://code.renci.org/gf/project/jargon/]] for the latest news and info.

Jargon-core consists of the following libraries

* jargon-core - base libraries, implementation of the iRODS protocol
* jargon-data-utils - additional functionality for dealing with iRODS data, such as building trees, storing information in iRODS on behalf of applications, and doing diffs between local and iRODS
* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS

Other libraries are planned, such as connection pooling, as well as administrative functions.

==Requirements==

-Jargon depends on Java 1.6+
-Jargon is built using Apache Maven2, see POM for dependencies

==Libraries==


Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]


==Bug Fixes==

 [#494] looses localIRODSTransfer data on final update
 [#496] BAD_INPUT_DESC_INDEX errors are being sent to irods client
  [#502] bug in synch
   [#519] tolerate quote in data name for acl query

==Features==

[#483] pool to share single conn - initial implementation of commons-pool to share a single connection from multiple threads
[#499] add thumbnail generation facility to Jargon data utls
[#500] enhanced 3.0 rule parsing and load rule from resource
[#515] add irods file factory support for uri file create without user info
 [#114] support for mounted collections, cross zone browsing, and soft links
 	* Added support for obj stat, initial ObjStat domain object [work in progress]
 	* Added cross zone query capability
 [#533] consolidate and simply move methods in DataTransferOperations